--- a/travelers_project/geography/templates/geography/sight_detail.html
+++ b/travelers_project/geography/templates/geography/sight_detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load thumbnail %}
 
 {% block content %}
 <div class="container">
@@ -39,23 +38,13 @@
                 <div class="clearfix"></div>
             </div>
             <p class="tag-in">
-                {% if sight_detail.text %}
-                {{ sight_detail.text }}
-                {% else %}
                 <span>
-                    Lorem ipsum dolor sit amet, mollis epicuri pri ei,
-                    perpetua honestatis ad vix. Ne duo ludus putent,
-                    cu causae tamquam voluptua duo. Agam officiis no duo,
-                    ut reque decore sea. Cu eripuit accusam vix.
-                    Facete blandit detraxit pri cu, sea soluta doming civibus ea.
-
-                    Eum eu tale clita iuvaret, cu est saperet forensibus interesset,
-                    cum ne case iusto oportere. Id idque indoctum eum, menandri mediocrem has ei.
-                    At usu modo quaerendum. Sit ei dicunt tacimates, mea ea enim eirmod suscipiantur,
-                    amet dicit ancillae vel in. Ex mea augue eloquentiam, his postea dolorem suavitate ea.
-                    Mel hendrerit accommodare concludaturque ex.
+                    {% if sight_detail.text %}
+                    {{ sight_detail.text }}
+                    {% else %}
+                    {% lorem 2 p %}
+                    {% endif%}
                 </span>
-                {% endif%}
             </p>
         </div>
         <div class="clearfix"></div>
