--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -17,6 +17,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
          addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
 
 
+
     </script>
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -32,9 +33,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						});
 					});
 
-
     </script>
-
 </head>
 <body>
 <!--header-->
@@ -49,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item active"><a href="{% url 'region_list_url' %}">Regions</a></li>
                 <li class="nav-item"><a href="{% url 'city_list_url' %}">Cities</a></li>
                 <li class="nav-item"><a href="{% url 'sight_list_url' %}">Sights</a></li>
-                <li class="nav-item"><a href="#">Traces</a></li>
+                <li class="nav-item"><a href="{% url 'routes-cities-list-url' %}">Traces</a></li>
                 <li class="nav-item"><a href="contact.html">Contacts</a></li>
             </ul>
             <!--script-->
@@ -58,8 +57,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						$(".top-nav ul").slideToggle(500, function(){
 						});
 					});
-
-
 
 
             </script>
@@ -168,6 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							$().UItoTop({ easingType: 'easeOutQuart' });
 
 						});
+
 
 
 
