--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -6,6 +6,8 @@
 <head>
     <title>Trudge a Travel Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
+    <link href="{% static 'css/bootstrap.css.map' %}" rel="stylesheet" type="text/css" media="all"/>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <!-- Custom Theme files -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
     <!--theme-style-->
@@ -13,16 +15,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content="Trudge Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+
+    <script src='{% static "js/jquery.min.js" %}' type="text/javascript"></script>
+    <script src='{% static "js/bootstrap.js" %}' type="text/javascript"></script>
     <script type="application/x-javascript">
          addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
-
-
-
     </script>
+
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
     <!--//fonts-->
+
     <script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
     <script type="text/javascript">
@@ -32,7 +36,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 						});
 					});
-
     </script>
 </head>
 <body>
@@ -48,7 +51,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li class="nav-item active"><a href="{% url 'region_list_url' %}">Regions</a></li>
                 <li class="nav-item"><a href="{% url 'city_list_url' %}">Cities</a></li>
                 <li class="nav-item"><a href="{% url 'sight_list_url' %}">Sights</a></li>
-                <li class="nav-item"><a href="{% url 'routes-cities-list-url' %}">Traces</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-expanded="false">Traces
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="{% url 'routes-cities-list-url' %}"> Cities routes </a></li>
+                        <li><a href="{% url 'routes-sights-list-url' %}"> Sights routes </a></li>
+                    </ul>
+                </li>
+
                 <li class="nav-item"><a href="contact.html">Contacts</a></li>
             </ul>
             <!--script-->
@@ -150,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="clearfix"></div>
         </div>
     </div>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+
     <script type="text/javascript">
 						$(document).ready(function() {
 							/*
@@ -165,8 +179,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							$().UItoTop({ easingType: 'easeOutQuart' });
 
 						});
-
-
 
 
     </script>
