--- a/travelers_project/traces/templates/traces/route_sights_list.html
+++ b/travelers_project/traces/templates/traces/route_sights_list.html
@@ -1,8 +1,62 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load thumbnail %}
 
 {% block content %}
-    <h1>Route Sights:</h1>
-    {% for route_sight in route_sights_list %}
-        <p>{{ route_sight.title }}</p>
-    {% endfor %}
-{% endblock %}
+
+<center>
+    <h1>Route Sights</h1>
+    <br>
+</center>
+<div class="col-sm-12">
+    <div class=" col-md-6 contact-left">
+        <script type="text/javascript">
+            ymaps.ready(init);
+            function init(){
+                var myMap = new ymaps.Map("map", {
+                    center: [55.76, 37.64],
+                    zoom: 7
+                });
+            }
+
+
+        </script>
+
+        <div id="map" style="wight:600px;height:500px;"></div>
+
+    </div>
+
+    <div class=" col-md-6 contact-right">
+        {% for route in route_sights_list %}
+        <div class="row">
+            <center><strong>{{ route.title }}</strong></center>
+            <div class="col-md-3 contact-left">
+                {% thumbnail route_sights_list.0.image "150x150" as im %}
+                <img src="{{ im.url }}" style="width:150px;height:150px;">
+                {% empty %}
+                <img src="{% static 'images/not-foto.png' %}" style="width:150px;height:150px;">
+                {% endthumbnail %}
+            </div>
+            <div class="col-md-8 contact-right">
+                {% for sight in route.sights.all %}
+                <a href="{% url 'sight_detail_url' pk=sight.pk %}">
+                    <div>{{ sight.title }}</div>
+                </a>
+                {% endfor %}
+                <br>
+                <p>
+                    <strong> Описание маршрута: </strong>
+                    {% if route.description %}
+                    {{ route.description|truncatewords:6 }}
+                    {% else %}
+                    {% lorem 6 w random %}
+                    {% endif %}
+                </p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% include 'geography/includes/paginator.html' %}
+
+{% endblock content %}
