--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header">
     <div class="container">
         <div class="logo">
-            <a href="{% url 'base_url' %}"><img src="{% static 'images/log.png' %}" alt=""></a>
+            <a href="{% url 'region_list_url' %}"><img src="{% static 'images/log.png' %}" alt=""></a>
         </div>
         <div class="top-nav">
             <span class="menu"><img src="{% static 'images/menu.png' %}" alt=""> </span>
