--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -66,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </ul>
                 </li>
 
-                <li class="nav-item"><a href="contact.html">Contacts</a></li>
+                <li class="nav-item"><a href="{% url 'feedback_url' %}">Contacts</a></li>
             </ul>
             <!--script-->
             <script>
