--- a/travelers_project/traces/templates/traces/route_cities_list.html
+++ b/travelers_project/traces/templates/traces/route_cities_list.html
@@ -4,36 +4,53 @@
 
 
 {% block content %}
-<center>
-    <h1>Route Cities</h1>
-    <br>
-</center>
+
+<center><h1>Route Cities</h1><br></center>
+
 {% for route in route_cities_list %}
-<div class="col-sm-12">
-    <h2>
-        <a href="{% url 'routes-cities-detail-url' pk=route.pk %}">{{ route.title }}</a>
-    </h2>
-    <hr>
-    {% for city in route.cities.all %}
-    <div class="col-sm-3">
-        {% thumbnail city.image "x200" as im %}
-        <img src="{{ im.url }}" style="width:70%; height:200px;">
-        {% empty %}
-        <img src="{% static 'images/not-foto.png' %}" style="width:100%; height:300px;">
-        {% endthumbnail %}
-        <p class="text-center" style="font-size:25px;">
-            <a href="{% url 'city_detail_url' pk=city.pk %}">{{ city.title }}</a>
-        </p>
 
-        <p class="text-center">
-            <a href="#" class="text-center">
-                <button class="btn btn-danger">Показать на карте</button>
-            </a>
-        </p>
+<div class="container">
+    <div class="single">
+        <div class="single-middle">
+            <div class="col-md-7 need">
+                <img class="img-responsive" src="{{ route.cities.first.image.url }}" alt="">
+            </div>
+
+            <div class="col-md-5 tag">
+                <div class="social-in">
+                    <p class="tag-in">
+                        <span>
+                            <strong>
+                                <center><a href="{% url 'routes-cities-detail-url' pk=route.pk %}">{{ route.title }}</a></center>
+                            </strong>
+                        </span>
+                    </p>
+
+                    {% for city in route.cities.all %}
+
+                        <div class="col-md-6 date">
+                            <p>Регион
+                                <a href="{% url 'region_detail_url' pk=city.region.pk %}">
+                                    <span>{{ city.region }}</span>
+                                </a>
+                            </p>
+                        </div>
+                        <div class="col-md-6 date">
+                            <p>Достопримечательности
+                                <span>
+                                    <a href="#">Website </a> |
+                                    <a href="#"> Design</a>
+                                </span></p>
+                        </div>
+                        <div class="clearfix"></div>
+
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
-    {% endfor %}
 </div>
-{% endfor %}
 
+{% endfor %}
 
 {% endblock content %}
