--- a/travelers_project/traces/templates/traces/route_cities_detail.html
+++ b/travelers_project/traces/templates/traces/route_cities_detail.html
@@ -1,16 +1,65 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 
 {% block content %}
-    {% if route_city_detail %}
-        <h1>{{ route_city_detail.title }}</h1>
-        {% with cities=route_city_detail.cities.all %}
-            {% for city in cities %}
-                <p>{{ city.title }}</p>
-            {% endfor %}
-        {% endwith %}
-    {% else %}
 
-        <p>None</p>
+<center><h1>{{ route_city_detail.title }}</h1><br></center>
 
-    {% endif%}
+<div class="container">
+    <div class="single">
+        <div class="single-middle">
+
+            <div class="col-md-7 need">
+                <script type="text/javascript">
+                    ymaps.ready(init);
+                    function init(){
+                        var myMap = new ymaps.Map("map", {
+                                {% with city=route_city_detail.cities.all|first %}
+                                    {% if sight.latitude %}
+                                        center: [{{ city.latitude }}, {{ city.longitude }}],
+                                    {% else %}
+                                        center: [59.92, 30.3461],
+                                    {% endif %}
+                                {% endwith %}
+                                zoom: 6,
+                                controls: ['zoomControl'],
+                                behaviors: ['drag']
+                        });
+                        {% for city in route_city_detail.cities.all %}
+                                myPlacemark = new ymaps.Placemark([{{ city.latitude }},  {{ city.longitude }}],
+                                                {
+                                                    hintContent: '{{ city.title }}'
+                                                });
+                                myMap.geoObjects.add(myPlacemark);
+                        {% endfor %}
+                    }
+                </script>
+                <div id="map" style="wight:600px;height:500px;"></div>
+            </div>
+
+            <div class="col-md-5 tag">
+                <div class="social-in">
+                    <div class="col-md-4 date">
+                        <p>Date <span>April 15,2014</span></p>
+                    </div>
+                    <div class="col-md-4 date">
+                        <p>Tags<span><a href="#">Website </a> | <a href="#"> Design	</a></span></p>
+                    </div>
+                    <div class="col-md-4 date">
+                        <p>Author<span>Michael Reimer</span></p>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+                <p class="tag-in">Lorem ipsum dolor sit amet, mollis epicuri pri ei, perpetua honestatis ad vix. Ne duo
+                    ludus putent, cu causae tamquam voluptua duo. Agam officiis no duo, ut reque decore sea. Cu eripuit
+                    accusam vix. Facete blandit detraxit pri cu, sea soluta doming civibus ea.
+                    <span>Eum eu tale clita iuvaret, cu est saperet forensibus interesset, cum ne case iusto oportere. Id idque indoctum eum, menandri mediocrem has ei. At usu modo quaerendum. Sit ei dicunt tacimates, mea ea enim eirmod suscipiantur, amet dicit ancillae vel in. Ex mea augue eloquentiam, his postea dolorem suavitate ea. Mel hendrerit accommodare concludaturque ex.</span>
+                </p>
+            </div>
+
+            <div class="clearfix"></div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
