--- a/travelers_project/traces/templates/traces/route_sights_list.html
+++ b/travelers_project/traces/templates/traces/route_sights_list.html
@@ -2,91 +2,79 @@
 {% load static %}
 {% load thumbnail %}
 
+
 {% block content %}
 
-<center>
-    <h1>Route Sights</h1>
-    <br>
-</center>
-<div class="col-sm-12">
-    <div class=" col-md-6 contact-left">
-        <script type="text/javascript">
-            ymaps.ready(init);
+<center><h1>Маршруты по достопримечательностям </h1><br></center>
 
-            function init(){
-                var myMap = new ymaps.Map("map", {
-                        {% with route=route_sights_list|first %}
-                            {% with sight=route.sights.all|first %}
-                                    {% if sight.latitude %}
-                                        center: [{{ sight.latitude }}, {{ sight.longitude }}],
-                                    {% else %}
-                                        center: [59.92, 30.3461],
-                                    {% endif %}
-                            {% endwith %}
-                        {% endwith %}
-                        zoom: 6,
-                        controls: ['zoomControl'],
-                        behaviors: ['drag']
-                });
-                {% for route in route_sights_list %}
-                    {% for sight in route.sights.all %}
-                        myPlacemark = new ymaps.Placemark([{{ sight.latitude }},  {{ sight.longitude }}],
-                                        {
-                                            balloonContentHeader: '<a href = "{% url 'sight_detail_url' pk=sight.pk %}">{{ sight.title }}</a><br>',
-                                            balloonContentBody: '{% thumbnail sight.image "150x150" as im %} ' +
-                                                                '<img src="{{ im.url }}" style="width:150px;height:150px;">' +
-                                                                '{% empty %}{% endthumbnail %}',
-                                            hintContent: '{{ sight.title }}'
-                                        });
-                        myMap.geoObjects.add(myPlacemark);
-                    {% endfor %}
-                {% endfor %}
-            }
-        </script>
+{% for route in route_sights_list %}
 
-        <div id="map" style="wight:600px;height:500px;"></div>
-
-    </div>
-
-    <div class=" col-md-6 contact-right">
-        {% for route in route_sights_list %}
-        <div class="row">
-            <center><strong>{{ route.title }}</strong></center>
-            <div class="col-md-3 contact-left">
-                {% thumbnail route_sights_list.first.sights.first.image "150x150" as im %}
-                <img src="{{ im.url }}" style="width:150px;height:150px;">
-                {% empty %}
-                <img src="{% static 'images/not-foto.png' %}" style="width:150px;height:150px;">
-                {% endthumbnail %}
+<div class="container">
+    <div class="single">
+        <div class="single-middle">
+            <div class="col-md-7 need">
+                {% if route.sights.first.image %}
+                    <img class="img-responsive" src="{{ route.sights.first.image.url }}" alt="{{ route.title }}">
+                {% else %}
+                    <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="{{ route.title }}">
+                {% endif %}
             </div>
-            <div class="col-md-8 contact-right">
-                {% for sight in route.sights.all %}
-                <a href="{% url 'sight_detail_url' pk=sight.pk %}">
-                    <div>{{ sight.title }}</div>
-                </a>
-                {% endfor %}
-                <br>
-                <p>
-                    <strong> Описание маршрута: </strong>
-                    {% if route.description %}
-                    {{ route.description|truncatewords:6 }}
-                    {% else %}
-                    {% lorem 6 w random %}
-                    {% endif %}
 
-                    {% with route_sights_list.all as routes %}
-                        {% with routes.sights.all.first as sight %}
-                            {{ sight.title }}
-                        {% endwith%}
-                    {% endwith %}
+            <div class="col-md-5 tag">
+                <div class="social-in">
+                    <p class="tag-in">
+                        <span>
+                            <strong>
+                                <center>
+                                    <a href="{% url 'routes-sights-detail-url' pk=route.pk %}">{{ route.title }}</a>
+                                </center>
+                            </strong>
+                        </span>
+                    </p>
 
-                </p>
+                    <div class="col-md-4 date"><p>Название</p></div>
+                    <div class="col-md-4 date"><p>Город</p></div>
+                    <div class="col-md-4 date"><p>Описание</p></div>
+                    <div class="clearfix"></div>
+
+
+                    {% for sight in route.sights.all %}
+                        <div class="col-md-4 date">
+                            <p>
+                                <a href="{% url 'sight_detail_url' pk=sight.pk %}">
+                                    <span>{{ sight.title }}</span>
+                                </a>
+                            </p>
+                        </div>
+
+                        <div class="col-md-4 date padding: 20px;">
+                            <p>
+                                <a href="{% url 'city_detail_url' pk=sight.city.pk %}">
+                                    <span>{{ sight.city.title }}</span>
+                                </a>
+                            </p>
+                        </div>
+
+                        <div class="col-md-4 date ">
+                            <p>
+                                <a href="{% url 'sight_detail_url' pk=sight.pk %}">
+                                    <span>
+                                        {{ sight.text|truncatewords:7 }}
+                                    </span>
+                                </a>
+                            </p>
+                        </div>
+
+                        <div class="clearfix"></div>
+                        <br>
+
+                    {% endfor %}
+                </div>
             </div>
         </div>
-        {% endfor %}
     </div>
-
 </div>
-{% include 'geography/includes/paginator.html' %}
+
+{% endfor %}
 
 {% endblock content %}
