--- a/travelers_project/traces/templates/traces/route_cities_list.html
+++ b/travelers_project/traces/templates/traces/route_cities_list.html
@@ -16,7 +16,7 @@
                 {% if route.cities.first.image %}
                     <img class="img-responsive" src="{{ route.cities.first.image.url }}" alt="{{ route.title }}">
                 {% else %}
-                    <img class="img-responsive" src="{% static ''images/not-foto.png'' %}" alt="{{ route.title }}">
+                    <img class="img-responsive" src="{% static 'images/not-foto.png' %}" alt="{{ route.title }}">
                 {% endif %}
             </div>
 
