--- a/travelers_project/geography/templates/geography/city_list.html
+++ b/travelers_project/geography/templates/geography/city_list.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="story">
         <center>
-            <h1>CITIES</h1>
+            <h1>Города</h1>
             <br>
         </center>
         {% for city in city_list %}
