ISSUE-136 Translate regions.html

--- a/travelers_project/geography/templates/geography/regions.html
+++ b/travelers_project/geography/templates/geography/regions.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="services">
-        <h3>REGIONS</h3>
+        <h3>Регионы</h3>
         <div class="grid-top-top">
             {% for region in region_list %}
             <div class="col-md-6 ">
