--- a/travelers_project/geography/templates/geography/sight_detail.html
+++ b/travelers_project/geography/templates/geography/sight_detail.html
@@ -22,7 +22,7 @@
                     <p>Date add<span>{{ sight_detail.add_date|date:"d m Y" }}</span></p>
                 </div>
                 <div class="col-md-4 date">
-                    <p>City
+                    <p>Город
                         {% if sight_detail.city.pk %}
                         <a href="{% url 'city_detail_url' pk=sight_detail.city.pk %}">
                             <span>{{ sight_detail.city.title }}</span>
