ISSUE-136 Translate travelers_project/geography/templates/geography/sight_list.html

--- a/travelers_project/geography/templates/geography/sight_list.html
+++ b/travelers_project/geography/templates/geography/sight_list.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="story">
         <center>
-            <h1>SIGHTS</h1>
+            <h1>Достопримечательности</h1>
             <br>
         </center>
         {% for sight in sight_list %}
