ISSUE-136 Translate route_cities_list.html

--- a/travelers_project/traces/templates/traces/route_cities_list.html
+++ b/travelers_project/traces/templates/traces/route_cities_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<center><h1>Route Cities</h1><br></center>
+<center><h1>Маршруты по городам</h1><br></center>
 
 {% for route in route_cities_list %}
 
